AX: UI Automation cannot find AutoFill or search cancel buttons https://bugs.webkit.org/show_bug.cgi?id=145241 <rdar://problem/21051411>

Reviewed by Chris Fleizach.

Source/WebCore:

Add support for hit testing the search cancel button and AutoFill button so that
they can be accessed by UI Automation.

Currently the accessibility hit test machinery ignores nodes in a shadow tree.
So, it neither finds the <input type="search"> cancel button nor the AutoFill button
when it performs a hit test. Therefore these buttons cannot be accessed using
UI Automation.

Tests: accessibility/hit-test-input-auto-fill-button.html
       accessibility/hit-test-input-search-cancel-button.html
       accessibility/input-search-cancel-button.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::accessibilityTextFieldDecorationHitTest): Added; returns
the AccessibilityObject for the search cancel button or AutoFill text field decoration as applicable.
(WebCore::AccessibilityRenderObject::accessibilityHitTest): Check whether the hit node
is a text field decoration.

LayoutTests:

Add tests to ensure that there exists an accessibility element for the
search cancel button and that it can be hit using a cursor position. Also
add a test to ensue that the AutoFill button can be hit using a cursor position.

* accessibility/hit-test-input-auto-fill-button-expected.txt: Added.
* accessibility/hit-test-input-auto-fill-button.html: Copied from LayoutTests/accessibility/input-auto-fill-button.html.
* accessibility/hit-test-input-search-cancel-button-expected.txt: Added.
* accessibility/hit-test-input-search-cancel-button.html: Added.
* accessibility/input-search-cancel-button-expected.txt: Added.
* accessibility/input-search-cancel-button.html: Copied from LayoutTests/accessibility/input-auto-fill-button.html.
* accessibility/resources/shouldBeAccessibleByCursor.js: Added.
(shouldBeAccessibleByCursor): Tests whether an AccessibilityUIElement can be hit
using its screen position.
* platform/wk2/TestExpectations: Mark tests hit-test-input-{auto-fill, search-cancel}-button.html
as failing due to <https://bugs.webkit.org/show_bug.cgi?id=71298>.

Canonical link: https://commits.webkit.org/164271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185828 268f45cc-cd09-0410-ab3c-d52691b4dbfc